services.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-microproject-service
  namespace: virtu
  labels:
    app: microproject
spec:
  selector:
    app: microproject
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  type: NodePort
